<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndroidAudioRecording</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="first_name">Frist Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="mobile_no">Mobile No:</string>
    <string name="email">E mail:</string>
    <string name="next">Next</string>
    <string name="record">Record Your Voice</string>
    <string name="voice">Voice</string>
    <string name="registration">Registration</string>
    <string name="choose_format_title">Choose Audio Format</string>
    <string name="start_recording">Record</string>
    <string name="stop_recording">Stop</string>
    <string name="audio_format">Format</string>
    <string name="preview">Preview</string>
    <string name="rerecord">Record Again</string>

</resources>
