 <LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    >
     <View android:layout_width="fill_parent"
         android:layout_height="5dp"/>
     
     <TextView android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/registration"
         android:textSize="18sp"
         android:layout_gravity="center_horizontal"/>
     
     <View android:layout_width="fill_parent"
         android:layout_height="15dp"/>
     
     
     <TableLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:stretchColumns="1" >
        
        <TableRow android:layout_width="fill_parent"
            android:layout_height="wrap_content"
             >
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_name"
                android:paddingLeft="10dp"/>
            
            <EditText android:id="@+id/fname"
                android:inputType="text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"/>
            
        </TableRow>
        <View android:layout_width="fill_parent"
            android:layout_height="10dp"/>
        <TableRow android:layout_width="fill_parent"
            android:layout_height="wrap_content" >
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_name"
                android:paddingLeft="10dp"/>
            
            <EditText  android:id="@+id/lname"
                android:inputType="text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"/>
            
        </TableRow>
        
        <View android:layout_width="fill_parent"
            android:layout_height="10dp"/>
        <TableRow android:layout_width="fill_parent"
            android:layout_height="wrap_content" >
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mobile_no"
                android:paddingLeft="10dp"/>
            
            <EditText  android:id="@+id/mbno"
                android:inputType="phone"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"/>
            
        </TableRow>
        
		<View android:layout_width="fill_parent"
            android:layout_height="10dp"/>
		
		
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
				android:paddingLeft="10dp"/>

            <EditText
                android:id="@+id/email_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                 >

                <requestFocus />
            </EditText>

        </TableRow>
        
        
     </TableLayout> 
     
      <Button android:id="@+id/next"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="@string/next"
            android:textSize="15sp"
            android:layout_gravity="center_horizontal"/>
    
    
 </LinearLayout>



<!-- <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />

</RelativeLayout> -->
